# cw6-main

./: .env.sample  README.md  groups.json  pyproject.toml
blogs/: admin.py  models.py
blogs/migrations/: 0001_initial.py
clients/: admin.py  models.py  services.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_initial.py
clients/templates/clients/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
config/: settings.py  urls.py
mailing_service/: admin.py  apps.py  models.py  scheduler.py  services.py  tasks.py  urls.py  views.py
mailing_service/management/commands/: send_mailing.py
mailing_service/migrations/: 0001_initial.py  0002_client_owner_mailing_owner_message_owner.py  0002_initial.py  0003_initial.py  0003_mailing_is_active.py  0004_alter_mailing_clients_delete_client.py  0005_alter_mailing_message_delete_message.py  0006_alter_mailing_options.py
mailing_service/templates/mailing_service/: base.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html
message/: admin.py  models.py  services.py  urls.py  views.py
message/migrations/: 0001_initial.py  0002_initial.py
message/templates/message/: message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: email_verification.html  login.html  register.html
