[tool.poetry]
name = "cw6"
version = "0.1.0"
description = ""
authors = ["KarelinIvan <ivan.karelin.1993@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
python-decouple = "^3.8"
psycopg2 = "^2.9.10"
flake8 = "^7.1.1"
djangorestframework = "^3.15.2"
pillow = "^11.0.0"
redis = "^5.2.0"
black = "^24.10.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
apscheduler = "^3.10.4"
django-apscheduler = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
